syntax = "proto3";

package private_location.v1;

option go_package = "github.com/openstatushq/openstatus/packages/proto/private_location/v1;v1";

enum NumberComparator {
  NUMBER_COMPARATOR_UNSPECIFIED = 0;
  NUMBER_COMPARATOR_EQUAL = 1;
  NUMBER_COMPARATOR_NOT_EQUAL = 2;
  NUMBER_COMPARATOR_GREATER_THAN = 3;
  NUMBER_COMPARATOR_GREATER_THAN_OR_EQUAL = 4;
  NUMBER_COMPARATOR_LESS_THAN = 5;
  NUMBER_COMPARATOR_LESS_THAN_OR_EQUAL = 6;
}

enum StringComparator {
  STRING_COMPARATOR_UNSPECIFIED = 0;
  STRING_COMPARATOR_CONTAINS = 1;
  STRING_COMPARATOR_NOT_CONTAINS = 2;
  STRING_COMPARATOR_EQUAL = 3;
  STRING_COMPARATOR_NOT_EQUAL = 4;
  STRING_COMPARATOR_EMPTY = 5;
  STRING_COMPARATOR_NOT_EMPTY = 6;
  STRING_COMPARATOR_GREATER_THAN = 7;
  STRING_COMPARATOR_GREATER_THAN_OR_EQUAL = 8;
  STRING_COMPARATOR_LESS_THAN = 9;
  STRING_COMPARATOR_LESS_THAN_OR_EQUAL = 10;
}

enum RecordComparator {
  RECORD_COMPARATOR_UNSPECIFIED = 0;
  RECORD_COMPARATOR_EQUAL = 1;
  RECORD_COMPARATOR_NOT_EQUAL = 2;
  RECORD_COMPARATOR_CONTAINS = 3;
  RECORD_COMPARATOR_NOT_CONTAINS = 4;
}

message StatusCodeAssertion {
  int64 target = 1;
  NumberComparator comparator = 2;
}

message BodyAssertion {
  string target = 1;
  StringComparator comparator = 2;
}

message HeaderAssertion {
  string target = 1;
  StringComparator comparator = 2;
  string key = 3;
}

message RecordAssertion {
  string record = 1;
  RecordComparator comparator = 2;
  string targert = 3;
}
